# Ba2-labo02

./: .gitignore  CMakeLists.txt  Makefile  README.md  labo_01_bruno_carvalho_gallay_david.cpp  labo_02_carvalho_bruno_gallay_david.cpp
.github/workflows/: ccpp.yml
doc/: Doxyfile
doc/doxy/html/: annotated.html  circle_8h.html  circle_8h__incl.map  circle_8h__incl.md5  circle_8h_source.html  classCircle-members.html  classCircle.html  classColor-members.html  classColor.html  classDate-members.html  classDate.html  classRectangle-members.html  classRectangle.html  classSquare-members.html  classSquare.html  classTriangle-members.html  classTriangle.html  classes.html  color_8h.html  color_8h__dep__incl.map  color_8h__dep__incl.md5  color_8h__incl.map  color_8h__incl.md5  color_8h_source.html  date_8h.html  date_8h__incl.md5  date_8h_source.html  dir_68267d1309a1af8e8297ef4c3efbcdba.html  files.html  functions.html  functions_enum.html  functions_func.html  globals.html  globals_enum.html  globals_func.html  globals_vars.html  graph_legend.html  index.html  menudata.js  rectangle_8h.html  (+11 more)
doc/doxy/latex/: annotated.tex  circle_8h.tex  circle_8h__incl.md5  classCircle.tex  classColor.tex  classRectangle.tex  classSquare.tex  classTriangle.tex  color_8h.tex  color_8h__dep__incl.md5  color_8h__incl.md5  dir_68267d1309a1af8e8297ef4c3efbcdba.tex  files.tex  (+13 more)
src/: date.cpp  date.h
tests/: diff_date.cpp  model.cpp  testAccessors.cpp  testComparisonOperators.cpp  testDiffDate.cpp  testSetters.cpp  test_circle.cpp  test_rectangle.cpp  test_square.cpp  test_triangle.cpp
(+30 files in other folders)
